tests/idris2/reg023/expected
1/1: Building boom (boom.idr)
Error: While processing right hand side of with block in eraseVar. Can't solve constraint between: S (countGreater thr xs) and countGreater thr xs.

boom.idr:23:42--23:66
    |
 23 |   eraseVar thr (x :: xs) (FS i) | True = FS <$> eraseVar thr xs i
    |                                          ^^^^^^^^^^^^^^^^^^^^^^^^

